# Sola

./: .clang-format  .clang-tidy  .gitignore  CMakeGraphVizOptions.cmake  CMakeLists.txt  LICENSE  README.md  TODO  cppcheck_suppressions.txt
editor/: CMakeLists.txt
editor/include/: application.hpp
editor/source/: main.cpp
runtime/: CMakeLists.txt
runtime/editor/SolaEditor/: __init__.py
runtime/editor/include/EditorFinalizer/: EditorFinalizer.hpp
runtime/editor/include/EditorInitializer/: EditorInitializer.hpp
runtime/editor/source/EditorFinalizer/: EditorFinalizer.cpp
runtime/editor/source/EditorInitializer/: EditorInitializer.cpp
runtime/include/: Runtime.hpp
runtime/include/Concepts/: FinalizerConcept.hpp  InitializerConcept.hpp
runtime/include/Finalizer/: Finalizer.hpp
runtime/include/Initializer/: Initializer.hpp
runtime/source/: Main.cpp
scripts/: auto_loader.py  build_final_structure.py  colors_generator.py  dg_dotpng.ps1  docs-header.html  ensurepip_starter.py  lines_counter.py  rgb.txt
